--- a/statamic/_config/fieldsets/property_beauchamp_lease.yaml
+++ b/statamic/_config/fieldsets/property_beauchamp_lease.yaml
@@ -62,7 +62,11 @@ fields:
       temp-off-market: Temporarily Off Market
   openhouse:
     display: Open House?
-    type: checkbox
+    type: select
+    options:
+      false: No Openhouse
+      true: Openhouse
+    default: false
   openhouse_grid:
     type: grid
     display: Open House(s)
