--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -85,7 +85,11 @@ fields:
     type: checkbox
   openhouse:
     display: Open House?
-    type: checkbox
+    type: select
+    options:
+      false: No Openhouse
+      true: Openhouse
+    default: false
   openhouse_grid:
     type: grid
     display: Open House
