--- a/statamic/_config/fieldsets/property_sale.yaml
+++ b/statamic/_config/fieldsets/property_sale.yaml
@@ -132,6 +132,7 @@ fields:
       townhouse: Townhouse
       house: House
       condo: Condo
+      condop: Condop
       coop: Co-op
       rental: Rental
       other: Other
