--- a/statamic/_config/settings.yaml
+++ b/statamic/_config/settings.yaml
@@ -125,6 +125,7 @@ _environments:
   dev:
     - 'http://localhost*'
     - '*.dev'
+    - '*.statamic'
     - '*.localip'
   staging:
     - 'staging.*.com'
