--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,9 @@ wwwwroot/_cache/*
 wwwwroot/!_cache/index.html
 wwwwroot/_logs/*
 wwwwroot/!_logs/index.html
+wwwwroot/assets
 wwwwroot/assets/*
-wwwwroot/_content/*
+wwwwroot/_content/
 wwwwroot/_config/users/*
 wwwwroot/_forms/*
 .htaccess
