--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ wwwwroot/_cache/*
 wwwwroot/!_cache/index.html
 wwwwroot/_logs/*
 wwwwroot/!_logs/index.html
-wwwwroot/assets
+wwwwroot/assets/
 wwwwroot/_content/
 wwwwroot/_config/users/*
 wwwwroot/_forms/*
