--- a/.gitignore
+++ b/.gitignore
@@ -12,10 +12,10 @@ Thumbs.db
 # wwwroot files #
 ######################
 wwwroot/_cache/
-wwwroot/_cache/*
+wwwroot/_cache/**/*
 wwwroot/!_cache/index.html
 wwwroot/_logs/
-wwwroot/_logs/*
+wwwroot/_logs/**/*
 wwwroot/!_logs/index.html
 wwwroot/assets/
 wwwroot/_content/
