--- a/wwwroot/_config/fieldsets/property_sale.yaml
+++ b/wwwroot/_config/fieldsets/property_sale.yaml
@@ -240,7 +240,7 @@ fields:
       quality: 100
   photo_carousel:
     type: file
-    force_array: true
+    force_array: false
     display: Photo Carousel
     instructions: Click Upload a File or Drag and Drop on the Upload box. You can upload multiple files at once.
     allowed: [png, gif, jpg, jpeg]
