--- a/wwwroot/_config/add-ons/raven/raven.yaml
+++ b/wwwroot/_config/add-ons/raven/raven.yaml
@@ -21,13 +21,10 @@ send_notification_email: true
 #    - postmark
 #    - sendgrid
 
-email_handler: mandrill
-#email_handler: sendgrid
+email_handler: mailgun
 
 # chosen mail service's api key
-email_handler_key:Ko-n7XPY1DYpUVcPpDYq2A
-#sendgrid
-#email_handler_key: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
+email_handler_key: mg.lesliegarfield.com:key-91902004ff8643076ac7c4abbb64a367
 
 master_killswitch: false
 
