hid slug from CMS and fixed blog background image on taxonomies

--- a/wwwroot/_config/fieldsets/property_beauchamp_sale.yaml
+++ b/wwwroot/_config/fieldsets/property_beauchamp_sale.yaml
@@ -8,6 +8,8 @@ fields:
   title:
     type: text
     display: Property Name
+  slug:
+    hide: true
   streeteasy_type:
     type: text
     hide: true
