added license key

--- a/wwwroot/_config/settings.yaml
+++ b/wwwroot/_config/settings.yaml
@@ -13,7 +13,7 @@
 ###########################################################################################
 
 # Enter your license key
-_license_key:
+_license_key: 01cecbf9-7fb9-44ec-bf08-81ea9a72763e
 
 _language: en
 
