--- a/wwwroot/_config/fieldsets/blog_entry.yaml
+++ b/wwwroot/_config/fieldsets/blog_entry.yaml
@@ -27,9 +27,11 @@ fields:
 		taxonomy:
 			type: categories
 			folder: blog
-
-
-
 	content:
 		type: redactor
 		display: Blog Content
+	  image_dir: assets/img/blog
+	  resize:
+	    max_width: 706
+	    quality: 80
+	    upsize: false
