blog redactor settings

--- a/wwwroot/_config/fieldsets/blog_entry.yaml
+++ b/wwwroot/_config/fieldsets/blog_entry.yaml
@@ -32,6 +32,6 @@ fields:
 		display: Blog Content
 	  image_dir: assets/img/blog
 	  resize:
-	    max_width: 706
+	    width: 706
 	    quality: 80
 	    upsize: false
