--- a/wwwroot/_config/bundles/location/location.yaml
+++ b/wwwroot/_config/bundles/location/location.yaml
@@ -40,7 +40,7 @@ mapping_service_style:
 mapping_service_attribution:
 
 # detects high-density displays and will double the tiles displayed
-detect_retina: true
+detect_retina: false
 
 # lets you provide a list of common locations for users to easily choose from
 # each location should be formatted like this:
@@ -53,3 +53,28 @@ detect_retina: true
 #
 # note: zoom is optional for each location, if not set, it will use starting_zoom
 common_locations:
+  -
+    name: Acadia National Park
+    latitude: 44.33
+    longitude: -68.21
+    zoom: 12
+  -
+    name: Badlands National Park
+    latitude: 43.75
+    longitude: -102.50
+    zoom: 12
+  -
+    name: Denali National Park
+    latitude: 63.33
+    longitude: -150.5
+    zoom: 12
+  -
+    name: Olympic National Park
+    latitude: 47.97
+    longitude: -123.50
+    zoom: 12
+  -
+    name: Yellowstone National Park
+    latitude: 44.61467
+    longitude: -110.47646
+    zoom: 12
