fix mobile view of Key Features and give option of hiding image post

--- a/wwwroot/_config/fieldsets/blog_entry.yaml
+++ b/wwwroot/_config/fieldsets/blog_entry.yaml
@@ -4,6 +4,9 @@ fields:
 		type: file
 		display: Preview Image
 		destination: assets/img/blog
+	main_image_display:
+		type: checkbox
+		display: Hide Preview Image in Blog Post?
 	author:
 		type: suggest
 		display: Author
