fixed location issue, added sitemaps, changed neighborhood issues, added schemas, added key feature ordering to property pages, added alt tags to lots of images

--- a/wwwroot/.htaccess
+++ b/wwwroot/.htaccess
@@ -35,6 +35,11 @@ RewriteRule ^.*/?\.git+ - [F,L]
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)\/(\?.*)?$ $1$2 [R=301,L]
 
+# ------------------------------------------------------------------------------
+# Route https://www to https://
+# ------------------------------------------------------------------------------
+RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
+RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
 
 # ------------------------------------------------------------------------------
 # Remove the Index File
@@ -43,5 +48,8 @@ RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php [QSA,L]
 
+# ------------------------------------------------------------------------------
+# Increase size of uploads
+# ------------------------------------------------------------------------------
 php_value post_max_size 150M
 php_value upload_max_filesize 30M
