--- a/wwwroot/_config/settings.yaml
+++ b/wwwroot/_config/settings.yaml
@@ -21,7 +21,7 @@ _language: en
 _site_root: /
 
 # Name of your site
-_site_name: Leslie J. Garfield & Co
+_site_name: Leslie J. Garfield & Co | New York City Townhouses and Small Buildings
 
 # Change the folder name for your content directory
 _content_root: _content
