enable html caching

--- a/wwwroot/_config/bundles/html_caching/html_caching.yaml
+++ b/wwwroot/_config/bundles/html_caching/html_caching.yaml
@@ -1,5 +1,5 @@
 # When set to `true`, HTML caching will be enabled
-enable: false
+enable: true
 
 # How long should pages be cached for? set this to either:
 #   - a time value, like "10 minutes"
