--- a/wwwroot/_config/fieldsets/property_lease.yaml
+++ b/wwwroot/_config/fieldsets/property_lease.yaml
@@ -229,13 +229,13 @@ fields:
   brochure:
     type: file
     display: Property Brochure
-    destination: assets/downloads
+    destination: assets/img/properties/sale
     allowed: [png, gif, jpg, jpeg, pdf]
     max_files: 1
   floor_plans:
     type: file
     display: Property Floorplans
-    destination: assets/downloads
+    destination: assets/img/properties/sale
     allowed: [png, gif, jpg, jpeg, pdf]
     max_files: 1
   content:
