--- a/wwwroot/_config/fieldsets/property_sale.yaml
+++ b/wwwroot/_config/fieldsets/property_sale.yaml
@@ -111,6 +111,15 @@ fields:
       folder: agents/garfield
       label: title
       value: url
+  similar_properties:
+    display: Override Similar Property Sorting by Neighborhood and Choose Properties
+    type: suggest
+    create: false
+    allow_blank: true
+    content:
+      folder: properties/new-york/sale
+      label: title
+      value: url
   property_type:
     display: Property Type
     type: suggest
@@ -242,13 +251,13 @@ fields:
   brochure:
     type: file
     display: Property Brochure
-    destination: assets/downloads
+    destination: assets/img/properties/sale
     allowed: [png, gif, jpg, jpeg, pdf]
     max_files: 1
   floor_plans:
     type: file
     display: Property Floorplans
-    destination: assets/downloads
+    destination: assets/img/properties/sale
     allowed: [png, gif, jpg, jpeg, pdf]
     max_files: 1
   content:
