--- a/wwwroot/_config/fieldsets/property_beauchamp_lease.yaml
+++ b/wwwroot/_config/fieldsets/property_beauchamp_lease.yaml
@@ -20,6 +20,14 @@ fields:
   apartment:
     type: text
     display: Apartment Number or Letter (optional)
+  city:
+    type: text
+    display: City
+    required: true
+  country:
+    type: text
+    display: Country
+    required: true
   currency:
     type: select
     display: Choose currency
