--- a/wwwroot/_config/fieldsets/property_sale.yaml
+++ b/wwwroot/_config/fieldsets/property_sale.yaml
@@ -173,6 +173,11 @@ fields:
   powder:
     display: Powder Rooms
     type: text
+  maintenance:
+    display: Maintenance Fees
+    type: text
+    instructions:
+      above: Enter a number with no currency symbol - no commas - no decimals (example 14000000)
   taxes:
     display: Annual Taxes
     type: text
