--- a/wwwroot/_config/fieldsets/property_sale.yaml
+++ b/wwwroot/_config/fieldsets/property_sale.yaml
@@ -174,7 +174,7 @@ fields:
     display: Powder Rooms
     type: text
   maintenance:
-    display: Maintenance Fees
+    display: Maintenance Fees (monthly)
     type: text
     instructions:
       above: Enter a number with no currency symbol - no commas - no decimals (example 14000000)
